--- a/notebooks/01_backbone_RFdiffusion.ipynb
+++ b/notebooks/01_backbone_RFdiffusion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3YhQmStxXerzvINhwfIIQ",
+      "authorship_tag": "ABX9TyOqY2RfUhjKn82Xzc1VGE5j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,47 +28,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "2-j75p8lIeYP"
-      },
-      "outputs": [],
       "source": [
-        "<details><summary>Cell 1 – Install packages (run once per session)</summary>\n",
-        "python\n",
-        "\n",
-        "#@title 🔧 Install RFdiffusion & helpers (~3 min)\n",
+        "# 🔧 Install RFdiffusion & helpers (≈3 min on Colab GPU)\n",
         "%%bash\n",
-        "python - <<'PY'\n",
-        "import subprocess, sys\n",
-        "pkgs = [\n",
-        "    \"git+https://github.com/sokrypton/RFdiffusion@v1.1.1\",\n",
-        "    \"git+https://github.com/sokrypton/ColabDesign@v1.1.1\",\n",
-        "    \"py3Dmol\", \"omegaconf\", \"hydra-core\"\n",
-        "]\n",
-        "subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--quiet\", *pkgs])\n",
-        "print(\"✅ Packages installed\")\n",
-        "PY\n",
+        "set -e\n",
         "\n",
-        "</details> <details><summary>Cell 2 – Design parameters</summary>\n",
-        "python\n",
-        "Copy\n",
+        "# 1.  Basic Python deps\n",
+        "python -m pip install --quiet --upgrade pip\n",
+        "python -m pip install --quiet py3Dmol omegaconf hydra-core jedi \\\n",
+        "    git+https://github.com/NVIDIA/dllogger#egg=dllogger\n",
         "\n",
-        "#@title ⚙️ Parameters\n",
-        "name        = \"design1\"  #@param {type:\"string\"}\n",
-        "length      = 100        #@param {type:\"integer\"}\n",
-        "symmetry    = \"none\"     #@param [\"none\",\"cyclic\",\"dihedral\"]\n",
-        "order       = 1          #@param {type:\"integer\"}\n",
-        "num_designs = 1          #@param {type:\"integer\"}\n",
-        "iterations  = 50         #@param [\"25\",\"50\",\"100\",\"150\",\"200\"] {type:\"raw\"}\n",
-        "print(f\"Backbone length {length}, copies {num_designs}\")\n",
+        "# 2.  DGL + e3nn (GPU wheels, no heavy CUDA deps pulled)\n",
+        "python -m pip install --quiet --no-dependencies \\\n",
+        "    dgl==2.0.0 -f https://data.dgl.ai/wheels/cu121/repo.html\n",
+        "python -m pip install --quiet --no-dependencies e3nn==0.5.5 opt_einsum_fx\n",
         "\n",
-        "</details> <details><summary>Cell 3 – Run RFdiffusion</summary>\n",
-        "python\n",
-        "Copy\n",
+        "# 3.  Clone RFdiffusion (if not already)\n",
+        "if [ ! -d RFdiffusion ]; then\n",
+        "  git clone --depth 1 https://github.com/sokrypton/RFdiffusion.git\n",
+        "fi\n",
         "\n",
-        "#@title 🚀 Run RFdiffusion\n",
-        "import subprocess, pathlib, sys\n",
+        "# 4.  Build & install the SE3Transformer sub‑module\n",
+        "python -m pip install --quiet ./RFdiffusion/env/SE3Transformer\n",
+        "\n",
+        "# 5.  ColabDesign (this repo *is* pip‑packaged)\n",
+        "python -m pip install --quiet git+https://github.com/sokrypton/ColabDesign.git\n",
+        "\n",
+        "echo \"✅  RFdiffusion + ColabDesign environment ready\"\n"
+      ],
+      "metadata": {
+        "id": "80efzUlqPdU9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ⚙️ User parameters\n",
+        "name        = \"design1\"   #@param {type:\"string\"}\n",
+        "length      = 100         #@param {type:\"integer\"}\n",
+        "symmetry    = \"none\"      #@param [\"none\",\"cyclic\",\"dihedral\"]\n",
+        "order       = 1           #@param {type:\"integer\"}\n",
+        "num_designs = 1           #@param {type:\"integer\"}\n",
+        "iterations  = 50          #@param [\"25\",\"50\",\"100\",\"150\",\"200\"] {type:\"raw\"}\n",
+        "print(f\"Backbone length {length}, copies {num_designs}\")\n"
+      ],
+      "metadata": {
+        "id": "f39nqZngPfZR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 🚀 Run RFdiffusion\n",
+        "import subprocess\n",
         "contigs = f\"{length}\"\n",
         "out_prefix = f\"outputs/{name}\"\n",
         "\n",
@@ -86,32 +102,47 @@
         "    cmd = [\"python\",\"-m\",\"RFdiffusion.run_inference\",\"--config-name\",\"symmetry\",\n",
         "           f\"inference.symmetry={symflag}\"] + cmd[2:]\n",
         "\n",
+        "print(\"Running:\\n\", \" \".join(cmd))\n",
         "subprocess.check_call(cmd)\n",
-        "print(\"✅ Backbone(s) finished; files in /content/outputs/\")\n",
-        "\n",
-        "</details> <details><summary>Cell 4 – Interactive preview</summary>\n",
-        "python\n",
-        "Copy\n",
-        "\n",
-        "#@title 👀 Preview first backbone\n",
-        "import glob, py3Dmol, pathlib\n",
+        "print(\"✅ Backbone(s) finished; files in /content/outputs/\")\n"
+      ],
+      "metadata": {
+        "id": "WuySor7HPhBh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 👀 Preview first backbone\n",
+        "import glob, py3Dmol\n",
         "pdb = glob.glob(f\"outputs/{name}_0.pdb\")[0]\n",
         "view = py3Dmol.view(js='https://3dmol.org/build/3Dmol.js')\n",
         "view.addModel(open(pdb).read(),'pdb')\n",
         "view.setStyle({'cartoon':{'color':'spectrum'}})\n",
-        "view.zoomTo(); view.show()\n",
-        "\n",
-        "</details> <details><summary>Cell 5 – Zip download</summary>\n",
-        "python\n",
-        "Copy\n",
-        "\n",
-        "#@title 📦 Download result\n",
+        "view.zoomTo(); view.show()\n"
+      ],
+      "metadata": {
+        "id": "MruLcELwPizd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 📦 Download result\n",
         "import shutil, google.colab\n",
         "zip_name = f\"{name}.result\"\n",
         "shutil.make_archive(zip_name, \"zip\", root_dir=\"outputs\", base_dir=name)\n",
-        "google.colab.files.download(f\"{zip_name}.zip\")\n",
-        "\n"
-      ]
+        "google.colab.files.download(f\"{zip_name}.zip\")\n"
+      ],
+      "metadata": {
+        "id": "RGYnp123Pj9D"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
